--- a/package.json
+++ b/package.json
@@ -3,25 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "node find-port.js",
+    "build": "next build && npm run postbuild",
+    "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "type-check": "tsc --noEmit",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@next/bundle-analyzer": "^15.5.2",
+    "@types/nodemailer": "^7.0.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
+    "i18next": "^25.4.2",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.542.0",
+    "next": "15.5.2",
+    "next-i18next": "^15.4.2",
+    "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-i18next": "^15.7.3",
+    "react-intersection-observer": "^9.16.0",
+    "resend": "^6.0.2",
+    "tailwind-merge": "^3.3.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "find-free-port": "^2.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
