--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node find-port.js",
+    
+    "dev": "next dev -p 5000",
+    "start": "next start -p 5000",
     "build": "next build && npm run postbuild",
     "postbuild": "next-sitemap",
-    "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "type-check": "tsc --noEmit",
